# paella

./: .gitignore  LICENSE  README.md  pyproject.toml
src/paella/: __init__.py  paella.py
src/pyaauth/: __init__.py  pyaauth.py
tests/: test_authenticate.py  test_authorize.py  test_basic.py
tests/db/: test_users.db
tests/keys/: test_rsa_priv.crt  test_rsa_pub.crt
