[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.7.0",
    "pytest>=7.4.0",
    "bandit>=1.7.5",
]

[project]
name = "pyaauth"
version = "0.1.0"
description = "Asynchronous Auth library"
authors = [
    {name = "Stephen Sadowski", email = "stephen.sadowski@sjsadowski.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
